--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Librerías principales del proyecto
 Django==5.2.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
@@ -10,3 +11,18 @@ xlsxwriter==3.1.9
 whitenoise==6.6.0
 Pillow==10.1.0
 python-decouple==3.8
+
+# Dependencias implícitas de Django y librerías usadas
+pytz==2024.2
+sqlparse==0.5.1
+asgiref==3.8.1
+
+# Dependencias de xhtml2pdf
+reportlab==4.2.2
+html5lib==1.1
+PyPDF2==3.0.1
+arabic-reshaper==3.0.0
+python-bidi==0.5.0
+
+# Dependencias opcionales pero recomendadas
+six==1.16.0
