Configuracion de Docker - Contenedor funcionando correctamente

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,75 @@
-__pycache__/
-*.py[cod]
-*.sqlite3
-*.db
-.env
-.env.*
+# Git
 .git
 .gitignore
-.mypy_cache/
-.pytest_cache/
-.cache/
-dist/
-build/
-node_modules/
-staticfiles/
+.gitattributes
+
+# Docker
+Dockerfile
+docker-compose.yml
+.dockerignore
+
+# Python
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+.Python
+env
+pip-log.txt
+pip-delete-this-directory.txt
+.tox
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.git
+.mypy_cache
+.pytest_cache
+.hypothesis
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Project specific
 media/
+staticfiles/
+logs/
+*.log
+db.sqlite3
+
+# Documentation
+README.md
+*.md
+docs/
+
+# Tests
+tests/
+test_*
+*_test.py
+
+# Temporary files
+*.tmp
+*.temp
