--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,23 +1,11 @@
 version: '3.8'
 
 services:
-  # Redis para cache y Celery
-  redis:
-    image: redis:7-alpine
-    container_name: reflexo_redis
-    restart: always
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - reflexo_network
-
-  # Aplicación Django
+  # Aplicación Django en modo desarrollo
   web:
     build: .
-    container_name: reflexo_django
-    restart: always
+    container_name: reflexo_django_dev
+    restart: unless-stopped
     ports:
       - "8000:8000"
     volumes:
@@ -25,91 +13,84 @@ services:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
     environment:
-      - DEBUG=False
+      - DEBUG=True
       - DJANGO_SETTINGS_MODULE=settings.settings
-      - DATABASE_HOST=host.docker.internal
+      - DATABASE_HOST=db
       - DATABASE_PORT=3306
       - DATABASE_NAME=reflexo
       - DATABASE_USER=root
       - DATABASE_PASSWORD=123456
       - REDIS_URL=redis://redis:6379/0
     depends_on:
+      - db
       - redis
     networks:
       - reflexo_network
     command: >
-      sh -c "python manage.py collectstatic --noinput &&
-             gunicorn --bind 0.0.0.0:8000 --workers 3 --timeout 120 settings.wsgi:application"
+      sh -c "python manage.py migrate &&
+             python manage.py collectstatic --noinput &&
+             python manage.py runserver 0.0.0.0:8000"
 
-  # Celery Worker
+  # Celery Worker en modo desarrollo
   celery:
     build: .
-    container_name: reflexo_celery
-    restart: always
+    container_name: reflexo_celery_dev
+    restart: unless-stopped
     volumes:
       - .:/app
     environment:
-      - DEBUG=False
+      - DEBUG=True
       - DJANGO_SETTINGS_MODULE=settings.settings
-      - DATABASE_HOST=host.docker.internal
+      - DATABASE_HOST=db
       - DATABASE_PORT=3306
       - DATABASE_NAME=reflexo
       - DATABASE_USER=root
       - DATABASE_PASSWORD=123456
       - REDIS_URL=redis://redis:6379/0
     depends_on:
+      - db
       - redis
       - web
     networks:
       - reflexo_network
-    command: celery -A settings worker -l info
+    command: celery -A settings worker -l debug --autoreload
 
-  # Celery Beat (scheduler)
+  # Celery Beat en modo desarrollo
   celery-beat:
     build: .
-    container_name: reflexo_celery_beat
-    restart: always
+    container_name: reflexo_celery_beat_dev
+    restart: unless-stopped
     volumes:
       - .:/app
     environment:
-      - DEBUG=False
+      - DEBUG=True
       - DJANGO_SETTINGS_MODULE=settings.settings
-      - DATABASE_HOST=host.docker.internal
+      - DATABASE_HOST=db
       - DATABASE_PORT=3306
       - DATABASE_NAME=reflexo
       - DATABASE_USER=root
       - DATABASE_PASSWORD=123456
       - REDIS_URL=redis://redis:6379/0
     depends_on:
+      - db
       - redis
       - web
     networks:
       - reflexo_network
-    command: celery -A settings beat -l info
+    command: celery -A settings beat -l debug --scheduler django_celery_beat.schedulers:DatabaseScheduler
 
-  # Nginx para servir archivos estáticos y como proxy reverso
+  # Nginx en modo desarrollo (sin SSL)
   nginx:
     image: nginx:alpine
-    container_name: reflexo_nginx
-    restart: always
+    container_name: reflexo_nginx_dev
+    restart: unless-stopped
     ports:
       - "80:80"
-      - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.dev.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/app/staticfiles
       - media_volume:/app/media
     depends_on:
       - web
     networks:
       - reflexo_network
-
-volumes:
-  redis_data:
-  static_volume:
-  media_volume:
-
-networks:
-  reflexo_network:
-    driver: bridge
