--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -147,7 +147,7 @@ services:
       - ./nginx/default.prod.conf:/etc/nginx/conf.d/default.conf
       - static_volume_prod:/app/staticfiles
       - media_volume_prod:/app/media
-      - ./ssl:/etc/nginx/ssl:ro  # Certificados SSL
+      # - ./ssl:/etc/nginx/ssl:ro  # Certificados SSL (comentado hasta configurar SSL)
     depends_on:
       web:
         condition: service_healthy
